fix: line contrast

--- a/css/_about-block.scss
+++ b/css/_about-block.scss
@@ -57,7 +57,7 @@
     &__line {
         height: 2px;
         width: 100%;
-        background-color: $text-color;
+        background-color: $line-color;
         position: relative;
 
         &::before {
